<resources>
    <string name="app_name">TX5256</string>
    <string name="action_settings">Settings</string>
    <string name="copyright">Copyright © TX5256</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="connexion">Connexion</string>
    <string name="infos">Informations Personnelles</string>
    <string name="info">Informations</string>
    <string name="maj">Mise à jour infos.</string>
    <string name="majInf">MAJ. informations personnelles</string>
    <string name="recherche">Rechercher un patient</string>
    <string name="rdv">Rendez-vous</string>
    <string name="allergies">Allergies</string>
    <string name="maladies">Maladies</string>
    <string name="traitements">Traitements</string>
    <string name="notes">Notes</string>
    <string name="poidstaille">Poids/Taille</string>
    <string name="historique">Historique</string>
    <string name="prendreRDV">Prendre RDV</string>
    <string name="back">Back</string>
    <string name="ajouterAl">Ajout allergie</string>
    <string name="editerAl">Editer allergie</string>
    <string name="ajouterMal">Ajout maladie</string>
    <string name="editerMal">Editer maladie</string>
    <string name="ajouterTrai">Ajouter traitement</string>
    <string name="editerTrai">Editer traitement</string>
    <string name="rechercher">Rechercher</string>
    <string name="prenomPatient">Prénom du patient</string>
    <string name="nomPatient">Nom du patient</string>
    <string name="synthese">Synthèse</string>
    <string name="nomPersonne">Nom de la personne</string>
    <string name="prenomPersonne">Prénom de la personne</string>
    <string name="adresse">Adresse de la personne</string>
    <string name="telephone">Téléphone de la personne</string>
    <string name="genre">Genre de la personne</string>
</resources>
